--- a/InstaStay/Areas/Identity/Views/Account/Login.cshtml
+++ b/InstaStay/Areas/Identity/Views/Account/Login.cshtml
@@ -47,17 +47,25 @@
                         </button>
                     </div>
 
-                    <div class="text-center mt-3">
-                        <p>Or login with:</p>
-                        <a href="#" class="btn btn-outline-primary btn-sm me-2">
-                            <i class="fab fa-google"></i> Google
-                        </a>
-                        <a href="#" class="btn btn-outline-primary btn-sm">
-                            <i class="fab fa-facebook-f"></i> Facebook
-                        </a>
-                    </div>
+                    
                 </form>
+                <div class="text-center mt-3">
+                    <form id="external-account" asp-action="ExternalLogin" method="post" class="form-horizontal">
+
+                        <div>
+                            <p>
+                                @foreach (var provider in ViewBag.ExternalLogins!)
+                                {
+
+                                    <button type="submit" class="btn btn-danger me-2 shadow-sm" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account"><i class="fab fa-google"></i>  @provider.DisplayName</button>
+                                }
+                            </p>
+                        </div>
+                    </form>
+                </div>
+
             </div>
+           
         </div>
     </div>
 </div>
