--- a/InstaStay/Areas/Identity/Views/Account/Profile.cshtml
+++ b/InstaStay/Areas/Identity/Views/Account/Profile.cshtml
@@ -85,6 +85,11 @@
                         <input asp-for="PostalCode" class="form-control" placeholder="Enter postal code" />
                         <span asp-validation-for="PostalCode" class="text-danger"></span>
                     </div>
+                    <div class="mt-3 text-center">
+                        <a asp-action="ChangePassword" asp-area="Identity" asp-controller="Account" class="btn btn-outline-primary">
+                            <i class="fa fa-lock me-1"></i>Go to Change Password
+                        </a>
+                    </div>
                     <div class="d-flex justify-content-between align-items-center mt-4">
                         <a asp-action="Index" class="btn btn-secondary">
                             <i class="fa fa-arrow-left me-1"></i>Back to List
